[gd_scene load_steps=14 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://MultiPlayer.gd" type="Script" id=2]
[ext_resource path="res://stages/water/2p.tres" type="SpriteFrames" id=3]
[ext_resource path="res://colors/red/leftframe.png" type="Texture" id=4]
[ext_resource path="res://Text.tscn" type="PackedScene" id=5]
[ext_resource path="res://TrashPreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://colors/green/rightframe.png" type="Texture" id=7]
[ext_resource path="res://ItemFrame.tscn" type="PackedScene" id=8]
[ext_resource path="res://noise.png" type="Texture" id=9]
[ext_resource path="res://Rainbow.shader" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 10 )
shader_param/active = false
shader_param/noiseTexture = ExtResource( 9 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment() {
    COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
    COLOR.rgb = vec3(avg);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[node name="MultiPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 128, 112 )
frames = ExtResource( 3 )
frame = 8
playing = true

[node name="Frame" type="Sprite" parent="."]
position = Vector2( 128, 127 )
texture = ExtResource( 4 )

[node name="RightFrame" type="Sprite" parent="Frame"]
material = SubResource( 1 )
texture = ExtResource( 7 )

[node name="Score1" parent="Frame" instance=ExtResource( 5 )]
position = Vector2( -12, -16 )
text = "0000"
font = "red"
separation = 8

[node name="Score2" parent="Frame" instance=ExtResource( 5 )]
position = Vector2( -12, 16 )
text = "0000"
font = "green"
separation = 8

[node name="Level1" parent="Frame" instance=ExtResource( 5 )]
position = Vector2( -8, -89 )
text = "0"
font = "red"
separation = 8

[node name="Level2" parent="Frame" instance=ExtResource( 5 )]
position = Vector2( 8, -89 )
text = "0"
font = "green"
separation = 8

[node name="Time" parent="Frame" instance=ExtResource( 5 )]
position = Vector2( -16, 48 )
text = "00'00"
font = "black"
separation = 8

[node name="TrashPreview1" parent="Frame" instance=ExtResource( 6 )]
position = Vector2( -120, -121 )
shown = 0

[node name="TrashPreview2" parent="Frame" instance=ExtResource( 6 )]
position = Vector2( 28, -121 )
shown = 0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.1906
margin_top = -220.362
margin_right = 18.8094
margin_bottom = -206.362
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board1" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -89.0
margin_right = 104.0
margin_bottom = 112.0

[node name="Board2" parent="." instance=ExtResource( 1 )]
anchor_left = 0.594
anchor_top = 0.103
anchor_right = 0.969
anchor_bottom = 1.0
margin_left = -0.0640106
margin_top = -0.0720024
margin_right = -0.0640106
margin_bottom = 0.0

[node name="ItemFrame1" parent="." instance=ExtResource( 8 )]
position = Vector2( 116, 210 )

[node name="ItemFrame2" parent="." instance=ExtResource( 8 )]
position = Vector2( 140, 210 )

[node name="BlackWhite1" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 3 )
margin_left = 6.5
margin_top = 22.0
margin_right = 103.5
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackWhite2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 3 )
margin_left = 150.5
margin_top = 22.5
margin_right = 247.5
margin_bottom = 214.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="spawn_trash" from="Board1" to="." method="_on_Board1_spawn_trash"]
[connection signal="use_item" from="Board1" to="." method="_on_Board1_use_item"]
[connection signal="won_item" from="Board1" to="." method="_on_Board1_won_item"]
[connection signal="spawn_trash" from="Board2" to="." method="_on_Board2_spawn_trash"]
[connection signal="use_item" from="Board2" to="." method="_on_Board2_use_item"]
[connection signal="won_item" from="Board2" to="." method="_on_Board2_won_item"]
